@startuml domain-go-so-mnoy
skinparam classAttributeIconSize 0
top to bottom direction

class City {
  +id : int
  +name : string
  +slug : string
  +timezone : string
}

class User {
  +id : int
  +telegram_id : bigint
  +username : string?
  +first_name : string?
  +last_name : string?
  +avatar_file_id : string?
  +age : int?
  +bio : text?
  +search_prefs : jsonb?
  +created_at : datetime
  +updated_at : datetime?
}

class Activity {
  +id : int
  +city_id : int
  +creator_id : int
  +kind : enum<event|seeking>
  +title : string
  +body : text
  +starts_at : datetime?
  +expires_at : datetime
  +place_text : string
  +chat_url : string?
  +visibility : enum<open|private>
  +status : string
  +published_notified : bool
  +reminder_sent : bool
  +created_at : datetime
}

class ActivityMember {
  +id : int
  +activity_id : int
  +user_id : int
  +status : enum<pending|joined>
  +chat_invite_notified : bool
  +created_at : datetime
  --
  unique(activity_id, user_id)
}

class Tag {
  +id : int
  +slug : string
  +name : string
  +emoji : string
  +sort_order : int
  +is_active : bool
}

City "1" --> "*" Activity : city
User "1" --> "*" Activity : creates
User "1" --> "*" ActivityMember : member
Activity "1" --> "*" ActivityMember : members
Activity "*" -- "*" Tag : activity_tags

@enduml
